fix whitespace when scrolling

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 aside {
   width: var(--image-width);
-  height: 100vh;
+  min-height: 100vh;
   background-image: url(./img/tim-mossholder-9_93SMxxU4s-unsplash.jpg);
   background-size: cover;
   word-wrap: break-word;
